--- a/Exercise/Week1/24.03.2020/boostrap.html
+++ b/Exercise/Week1/24.03.2020/boostrap.html
@@ -53,9 +53,9 @@
 	</div>
 	<div class="container mt-3" style="border: 4px solid red">
 		<div class="row row1">
-			<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3" style="border: 2px solid black">.col-md-4</div>
-			<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3" style="border: 2px solid black" >.col-md-4</div>
-			<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3" style="border: 2px solid black">.col-md-4</div>	
+			<div class="col-sm-12 col-md-6 col-lg-4" style="border: 2px solid black">This is responsive</div>
+			<div class="col-sm-12 col-md-6 col-lg-4" style="border: 2px solid black" >This is responsive</div>
+			<div class="col-sm-12 col-md-6 col-lg-4" style="border: 2px solid black">This is responsive</div>	
 		</div>
 	</div>
 </body>
