--- a/Exercise/Week1/24.03.2020/boostrap.html
+++ b/Exercise/Week1/24.03.2020/boostrap.html
@@ -14,49 +14,86 @@
 	</style>
 </head>
 <body>
-	<h1 class="text-center ">Exercise 1 Boostrap</h1>
-	<div class="container mt-3" style="border: 4px solid red">
-		<div class="row row1">
-			<div class="col-md-4" style="border: 2px solid black">.col-md-4</div>
-			<div class="col-md-4" style="border: 2px solid black" >.col-md-4</div>
-			<div class="col-md-4" style="border: 2px solid black">.col-md-4</div>
+	<div>
+		<h1 class="text-center ">Exercise 1 Boostrap</h1>
+		<div class="container mt-3" style="border: 4px solid red">
+			<div class="row row1">
+				<div class="col-md-4" style="border: 2px solid black">.col-md-4</div>
+				<div class="col-md-4" style="border: 2px solid black" >.col-md-4</div>
+				<div class="col-md-4" style="border: 2px solid black">.col-md-4</div>
+			</div>
+			<div class="row row2">
+				<div class="col-md-4" style="border: 2px solid black">.col-md-4</div>
+				<div class="col-md-4" style="border: 2px solid black">.col-md-4</div>
+				<div class="col-md-4" style="border: 2px solid black">.col-md-4</div>
+			</div>
 		</div>
-		<div class="row row2">
-			<div class="col-md-4" style="border: 2px solid black">.col-md-4</div>
-			<div class="col-md-4" style="border: 2px solid black">.col-md-4</div>
-			<div class="col-md-4" style="border: 2px solid black">.col-md-4</div>
+		<div class="container mt-3" style="border: 4px solid red">
+			<div class="row row1">
+				<div class="col-md-3" style="border: 2px solid black">.col-md-3</div>
+				<div class="col-md-3 offset-md-6" style="border: 2px solid black">.col-md-3</div>
+			</div>
+			<div class="row row2">
+				<div class="col-md-3" style="border: 2px solid black">.col-md-3</div>
+				<div class="col-md-3 offset-md-6" style="border: 2px solid black">.col-md-3</div>
+			</div>
 		</div>
-	</div>
-	<div class="container mt-3" style="border: 4px solid red">
-		<div class="row row1">
-			<div class="col-md-3" style="border: 2px solid black">.col-md-3</div>
-			<div class="col-md-3 offset-md-6" style="border: 2px solid black">.col-md-3</div>
+		<div> 
+			<div class="row row1">
+				<div class="col-md-6" style="border: 2px solid black">.col-md-6</div>
+				<div class="col-md-6" style="border: 2px solid black">.col-md-6</div>	
+			</div>
+			<div class="row row2">
+				<div class="col-md-6" style="border: 2px solid black">.col-md-6</div>
+				<div class="col-md-6" style="border: 2px solid black">.col-md-6</div>	
+			</div>
 		</div>
-		<div class="row row2">
-			<div class="col-md-3" style="border: 2px solid black">.col-md-3</div>
-			<div class="col-md-3 offset-md-6" style="border: 2px solid black">.col-md-3</div>
-		</div>
-	</div>
-	<div> 
-		<div class="row row1">
+		<div class="container mt-3" style="border: 4px solid red">
 			<div class="col-md-6" style="border: 2px solid black">.col-md-6</div>
-			<div class="col-md-6" style="border: 2px solid black">.col-md-6</div>	
+				<div class="col-md-6" style="border: 2px solid black">.col-md-6</div>	
 		</div>
-		<div class="row row2">
-			<div class="col-md-6" style="border: 2px solid black">.col-md-6</div>
-			<div class="col-md-6" style="border: 2px solid black">.col-md-6</div>	
+		<div class="container mt-3" style="border: 4px solid red">
+			<div class="row row1">
+				<div class="col-sm-12 col-md-6 col-lg-4" style="border: 2px solid black">This is responsive</div>
+				<div class="col-sm-12 col-md-6 col-lg-4" style="border: 2px solid black" >This is responsive</div>
+				<div class="col-sm-12 col-md-6 col-lg-4" style="border: 2px solid black">This is responsive</div>	
+			</div>
+		</div>
+		<p></p>
+	</div>
+	<div>
+		<h1>Exercise 2</h1>
+		<div class="alert alert-success" style="width: 30%">Success!</div>
+		<div class="alert alert-info"style="width: 30%">Info!</div>
+		<div class="alert alert-danger"style="width: 30%">Danger!</div>
+		<div class="btn-group">
+			<button class="btn btn-success" style="width: 20%">Success</button>
+			<button class="btn btn-primary" style="width: 20%">Primary</button>
+			<button class="btn btn-danger" style="width: 20%">Danger</button>
+		</div>
+		<div class="container">
+			<h1 style="text-align: center;"> Form</h1>
+			<form>
+				<div class="form-group">
+					<label>Name:</label>
+					<input type="text" class="form-control" id="name" placeholder="enter your name" name="name">
+				</div>
+				<div class="form-group">
+					<label>Last Name:</label>
+					<input type="text" class="form-control" id="lastname" placeholder="Enter your last name" name="lastname">
+				</div>
+				<div class="form-group">
+					<label>Phone Number:</label>
+					<input type="number" class="form-control" id="phone" placeholder="enter your phone number" name="phone">
+				</div>
+				<div class="form-group">
+					<label>Email:</label>
+					<input type="email" class="form-control" id="email" placeholder="enter your email" name="email">
+				</div>
+				<button type="submit" class="btn btn-info">Submit</button> 
+			</form>
 		</div>
 	</div>
-	<div class="container mt-3" style="border: 4px solid red">
-		<div class="col-md-6" style="border: 2px solid black">.col-md-6</div>
-			<div class="col-md-6" style="border: 2px solid black">.col-md-6</div>	
-	</div>
-	<div class="container mt-3" style="border: 4px solid red">
-		<div class="row row1">
-			<div class="col-sm-12 col-md-6 col-lg-4" style="border: 2px solid black">This is responsive</div>
-			<div class="col-sm-12 col-md-6 col-lg-4" style="border: 2px solid black" >This is responsive</div>
-			<div class="col-sm-12 col-md-6 col-lg-4" style="border: 2px solid black">This is responsive</div>	
-		</div>
-	</div>
+
 </body>
 </html>
